[package]
name = "picologger"
version = "0.9.2"
edition = "2024"
license = "MIT"
authors = ["Loga Shanmugam <logashanmugam16@gmail.com>"]
description = "Logger for HPC"
repository = "https://github.com/Loga-Shanmugam/picolog"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
fastrand = "2.3.0"
io-uring = "0.7.11"
libc = "0.2.178"
slab = "0.4.11"
thiserror = "2.0.17"
